LIST OF CHANGES
---------------
release 2.9
 - added metrics columns to iseq_product_metrics (for RNA)
 - superfluous database indexes dropped
 - DBIx schema update for primer_panel
 - added columns tag_hops_percent and tag_hops_power to iseq_run_lane_metrics table

release 2.8
 - added DBIx binding for oseq_flowcell table (describes LIMS info for ONT)
 - Travis build - for Perl v 5.22 change to interpreter with threaded support

release 2.7
 - DBIx binding update

release 2.6
 - ensure lists of study users email addresses do not contain empty or undefined entries

release 2.5
 - add column run_priority to iseq_run_lane_metrics table

release 2.4
 - change in use of cycles value; expected_cycles calculated from iseq_flowcell read lengths and length of tag sequence(s).

release 2.3
 - library_type added to LibraryDigest entity

release 2.2
 - DBIx schema update

release 2.1
 - small change to LibraryDigest to support non SS tracked libraries.
 - use custom build base class to get correct version in a distribution
 - Travis tweaks
   + add deployment to GitHub Releases
   + add newer 5.22 Perl to travis build matrix and allow container builds (sudo false)

release 2.0
 - update to test script and data for filters in LibraryDigest
 - added DBIx class for the new pacbio LIMs data table

release 1.8
 - parameterized WTSI::DNAP::Warehouse::Schema::Query::IseqFlowcell role
   to allow for query on run id
 - iseq_product_metrics table: add columns to store in-house qc values

release 1.7
 - extend field size for mean_bait_coverage RT#495558, Change request No6

release 1.6
 - change the comment on iseq_run_lane_metrics.unexpected_tags_percent
 - update DBIx schema to reflect this change and propagate any changes
   to other tables of the live database

release 1.5
 - Ability to query by id_study_lims in LibraryDigest
 - Added unexpected tag and chimeric fields to iseq_product_metric and iseq_run_lane_metric tables
 - Ability to restrict by (legacy) library id